@@ -978,19 +978,34 @@ YY_RULE_SETUP
 
   matched_pattern("^{ws}*{func-decl}\({ws}*{quoted-symbol}{ws}*,", yytext);
 
-  /* FIXME : Insert an xref for the AC_DEFUN call. */
-
   current_function_line_start = sn_line();
   current_function_column_start = sn_column();
 
-  /* Skip AC_DEFUN( */
+  /* Skip {ws} */
 
   for ( ; *x ; x++) {
-      if (*x == '(') {
-          x++;
+      if (*x != ' ' &&
+          *x != '\t') {
           break;
       }
   }
+
+  /* Find '(' character after AC_DEFUN */
+  
+  for (y=x ; *y ; y++) {
+      if (*y == '(') {
+          break;
+      }
+  }
+
+  /* Highlight AC_DEFUN as a keyword, not a macro invocation */
+
+  sn_highlight(SN_HIGH_KEYWORD,
+      sn_line(), sn_column() + (x - yytext),
+      sn_line(), sn_column() + (y - yytext));
+
+  x = y;
+  x++;
 
   /* Skip {ws} and optional [ */
 
@@ -1033,7 +1048,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 336 "m4browser.l"
+#line 351 "m4browser.l"
 {
   char * x = (char *) yytext;
   char * y;
@@ -1082,7 +1097,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 382 "m4browser.l"
+#line 397 "m4browser.l"
 ECHO;
 	YY_BREAK
 case YY_STATE_EOF(INITIAL):
@@ -1973,7 +1988,7 @@ int main()
 	return 0;
 	}
 #endif
-#line 382 "m4browser.l"
+#line 397 "m4browser.l"
 
 
 void dump_function_definition() {
